5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1595_1016.log
== SUBMITION (2019-06-10 14:20:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import* 
a=float(input('lado1: '))
b=float(input('lado2: '))
c=float(input('lado3: '))

a=((a+b+c)/(2))
A=(((s) * (s-a)* (s-b)*(s-c))**(1/2))
print(A, 5)
-- EXECUTION TIME:
0.798291
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 10, in <module>
    A=(((s) * (s-a)* (s-b)*(s-c))**(1/2))
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:21:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import* 
a=float(input('lado1: '))
b=float(input('lado2: '))
c=float(input('lado3: '))

a=((a+b+c)/(2))
A=(((s)*(s-a)*(s-b)*(s-c))**(1/2))
print(round(A, 5))
-- EXECUTION TIME:
0.904963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1016/main.py", line 10, in <module>
    A=(((s)*(s-a)*(s-b)*(s-c))**(1/2))
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:21:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import* 
a=float(input('lado1: '))
b=float(input('lado2: '))
c=float(input('lado3: '))

s=((a+b+c)/(2))
A=(((s)*(s-a)*(s-b)*(s-c))**(1/2))
print(round(A, 5))
-- EXECUTION TIME:
0.764825
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
lado1: lado2: lado3: 600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
lado1: lado2: lado3: 709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:22:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import* 
a=float(input('lado1: '))
b=float(input('lado2: '))
c=float(input('lado3: '))

s=((a+b+c)/(2))
A=(((s)*(s-a)*(s-b)*(s-c))**(1/2))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:22:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import* 
a=float(input('lado1: '))
b=float(input('lado2: '))
c=float(input('lado3: '))

s=((a+b+c)/(2))
A=(((s)*(s-a)*(s-b)*(s-c))**(1/2))
print(round(A, 5))
-- EXECUTION TIME:
0.736935
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
